--- a/main/templates/actualizar_whoosh.html
+++ b/main/templates/actualizar_whoosh.html
@@ -1,7 +1,7 @@
 {% extends 'master.html' %}
 
 {% block titulo %} 
-	Identifiquese para poblar la base de datos
+	Identifiquese para poblar Whoosh
 {% endblock %}   
 
 {% block contenido %} 
