Versión final sin sistema de recomendación

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -12,6 +12,8 @@
             <p class="card-text">Con StreamSurfer podrás realizar acciones de listado y búsquedas de las series y películas
                 más populares recientemente.<br /> Además, se podrán realizar acciones de sistemas de recomendación como
                 son buscar series y películas recomendadas dada una determinada.</p>
+            <br/>
+            <p class="card-text">Actualmente el sistema contiene {{num_peliculas}} peliculas y {{num_series}} series</p>
         </div>
     </div>
     <div clas="text-center">
