--- a/main/templates/master.html
+++ b/main/templates/master.html
@@ -47,15 +47,7 @@
 					<a class="dropdown-item" href="/busqueda_titulo">Buscar por título</a>
 					<a class="dropdown-item" href="/busqueda_plataforma">Buscar por plataforma de streaming</a>
 					<a class="dropdown-item" href="/busqueda_genero">Buscar por género</a>
-				</div>
-			</li>
-			<li class="nav-item dropdown">
-				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					Acciones de sistemas de recomendación
-				</a>
-				<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink4">
-					<a class="dropdown-item" href="/recomend_champion">Buscar campeones recomendados según un campeón determinado</a>
-					<a class="dropdown-item" href="/recomend_player">Buscar jugadores recomendados según un jugador determinado</a>
+					<a class="dropdown-item" href="/busqueda_puntuacion">Buscar por puntuación</a>
 				</div>
 			</li>
 		  </ul>
