--- a/main/templates/busqueda_plataforma.html
+++ b/main/templates/busqueda_plataforma.html
@@ -1,5 +1,4 @@
 {% extends 'master.html' %}
-{% load filter_tags %}
 
 {% block titulo %} Búsqueda de una serie o película por su plataforma de streaming {% endblock %}
 
@@ -25,147 +24,46 @@
     </form>
 </div>
 
-<div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 text-center table-responsive">
-	{% if peliculas %}
-	<label for="peliculas" class="h4" style="margin-bottom: 25px;">Películas</label>
-    <table class="table table-striped table-hover table-info" style="margin-bottom: 50px;">
-		<thead class="thead-dark">
-			<tr class="text-center">
-				<th class="align-middle" scope="col">#</th>
-				<th class="align-middle" scope="col">Póster</th>
-				<th class="align-middle" scope="col">Título</th>
-				<th class="align-middle" scope="col">Géneros</th>
-				<th class="align-middle" scope="col">Título original</th>
-				<th class="align-middle" scope="col">Duración</th>
-				<th class="align-middle" scope="col">Fecha de estreno</th>
-				<th class="align-middle" scope="col">Puntuación en IMDB</th>
-				<th class="align-middle" scope="col">Director</th>
-				<th class="align-middle" scope="col">Opciones de streaming</th>
-			</tr>
-		</thead>
-		<tbody>
+{% if peliculas %}
+	<div class="container">
+		<label for="peliculas" class="h4 text-center" style="margin-bottom: 25px;">Películas</label>
+	</div>
+    <div class="container">
+		<div class="row">
 			{% for pelicula in peliculas %}
-				<tr class="text-center">
-					<th class="align-middle" scope="row">{{forloop.counter}}</th>
-					<td class="align-middle"><img width="150" alt="Poster" src="{{pelicula.poster}}" /></td>
-					<td class="align-middle">{{pelicula.titulo}}</td>
-					<td class="align-middle">{{pelicula.generos}}</td>
-					<td class="align-middle">{{pelicula.tituloOriginal}}</td>
-					<td class="align-middle">{{pelicula.duracion}}</td>
-					<td class="align-middle">{{pelicula.fechaEstreno}}</td>
-					<td class="align-middle">{{pelicula.imdb}}</td>
-					<td class="align-middle">{{pelicula.director}}</td>
-					<td class="align-middle">
-					{% for plataforma, link in pelicula.a.streamsPelicula.items %}
-						{% if plataforma == "Netflix" %}
-							<a href="{{link}}" target="_blank"><img class="w-75 p-1" alt="Icon" src="https://images.justwatch.com/icon/207360008/s100"/></a>
-						{% endif %}
-						{% if plataforma == "Rakuten TV" %}
-							<a href="{{link}}" target="_blank"><img class="w-75 p-1" alt="Icon" src="https://images.justwatch.com/icon/128599720/s100"/></a>
-						{% endif %}
-						{% if plataforma == "Amazon Prime Video" %}
-							<a href="{{link}}" target="_blank"><img class="w-75 p-1" alt="Icon" src="https://images.justwatch.com/icon/52449861/s100"/></a>
-						{% endif %}
-						{% if plataforma == "Atres Player" %}
-							<a href="{{link}}" target="_blank"><img class="w-75 p-1" alt="Icon" src="https://images.justwatch.com/icon/179272126/s100"/></a>
-						{% endif %}
-						{% if plataforma == "HBO" %}
-							<a href="{{link}}" target="_blank"><img class="w-75 p-1" alt="Icon" src="https://images.justwatch.com/icon/3748099/s100"/></a>
-						{% endif %}
-						{% if plataforma == "Movistar Plus" %}
-							<a href="{{link}}" target="_blank"><img class="w-75 p-1" alt="Icon" src="https://images.justwatch.com/icon/5985414/s100"/></a>
-						{% endif %}
-						{% if plataforma == "Disney Plus" %}
-							<a href="{{link}}" target="_blank"><img class="w-75 p-1" alt="Icon" src="https://images.justwatch.com/icon/147638351/s100"/></a>
-						{% endif %}
-						{% if plataforma == "Filmin" %}
-							<a href="{{link}}" target="_blank"><img class="w-75 p-1" alt="Icon" src="https://images.justwatch.com/icon/187161245/s100"/></a>
-						{% endif %}
-						{% if plataforma == "Apple TV Plus" %}
-							<a href="{{link}}" target="_blank"><img class="w-75 p-1" alt="Icon" src="https://images.justwatch.com/icon/152862153/s100"/></a>
-						{% endif %}
-						{% if plataforma == "Crunchyroll" %}
-							<a href="{{stream.1}}" target="_blank"><img class="w-75 p-1" alt="Icon" src="https://images.justwatch.com/icon/127445869/s100"/></a>
-						{% endif %}
-						{% if plataforma == '' %}
-							<a>Sin opciones de streaming</a>
-						{% endif %}
-					{% endfor %}
-					</td>
-				</tr>
-			{% endfor %}		
-		</tbody>
-	</table>
+			<div class="col" style="padding-bottom:30px">
+				<div class="card" style="width: 18rem;">
+					<a href="/peliculas/{{pelicula.id}}"><img class="card-img-top" src="{{pelicula.poster}}" alt="Poster"></a>
+					<div class="card-body">
+						<h5 class="card-title">{{pelicula.titulo}}</h5>
+						<p class="card-text">Director: {{pelicula.director}}</p>
+					</div>
+				</div>
+			</div>
+			{% endfor %}	
+		</div>
+	</div>
+	{% endif %}
 	
-    {% endif %}
 	{% if series %}
-	<label for="series" class="h4" style="margin-bottom: 25px;">Series</label>
-    <table class="table table-striped table-hover table-info w-100 h-auto">
-		<thead class="thead-dark">
-			<tr class="text-center">
-				<th class="align-middle" scope="col">#</th>
-				<th class="align-middle" scope="col">Póster</th>
-				<th class="align-middle" scope="col">Título</th>
-				<th class="align-middle" scope="col">Géneros</th>
-				<th class="align-middle" scope="col">Título original</th>
-				<th class="align-middle" scope="col">Fecha de estreno</th>
-				<th class="align-middle" scope="col">Puntuación en IMDB</th>
-				<th class="align-middle" scope="col">Temporadas</th>
-				<th class="align-middle" scope="col">Opciones de streaming</th>
-			</tr>
-		</thead>
-		<tbody>
+	<div class="container">
+		<label for="series" class="h4" style="margin-bottom: 25px;">Series</label>
+	</div>
+    <div class="container">
+		<div class="row">
 			{% for serie in series %}
-				<tr class="text-center">
-					<th class="align-middle" scope="row">{{forloop.counter}}</th>
-					<td class="align-middle"><img width="150" alt="Poster" src="{{serie.poster}}" /></td>
-					<td class="align-middle">{{serie.titulo}}</td>
-					<td class="align-middle">{{serie.generos}}</td>
-					<td class="align-middle">{{serie.tituloOriginal}}</td>
-					<td class="align-middle">{{serie.fechaEstreno}}</td>
-					<td class="align-middle">{{serie.imdb}}</td>
-					<td class="align-middle">{{serie.temporadas}}</td>
-					<td class="align-middle">
-					{% for plataforma, link in serie.a.streamsSerie.items %}
-						{% if plataforma == "Netflix" %}
-							<a href="{{link}}" target="_blank"><img class="w-75 p-1" alt="Icon" src="https://images.justwatch.com/icon/207360008/s100"/></a>
-						{% endif %}
-						{% if plataforma == "Rakuten TV" %}
-							<a href="{{link}}" target="_blank"><img class="w-75 p-1" alt="Icon" src="https://images.justwatch.com/icon/128599720/s100"/></a>
-						{% endif %}
-						{% if plataforma == "Amazon Prime Video" %}
-							<a href="{{link}}" target="_blank"><img class="w-75 p-1" alt="Icon" src="https://images.justwatch.com/icon/52449861/s100"/></a>
-						{% endif %}
-						{% if plataforma == "Atres Player" %}
-							<a href="{{link}}" target="_blank"><img class="w-75 p-1" alt="Icon" src="https://images.justwatch.com/icon/179272126/s100"/></a>
-						{% endif %}
-						{% if plataforma == "HBO" %}
-							<a href="{{link}}" target="_blank"><img class="w-75 p-1" alt="Icon" src="https://images.justwatch.com/icon/3748099/s100"/></a>
-						{% endif %}
-						{% if plataforma == "Movistar Plus" %}
-							<a href="{{link}}" target="_blank"><img class="w-75 p-1" alt="Icon" src="https://images.justwatch.com/icon/5985414/s100"/></a>
-						{% endif %}
-						{% if plataforma == "Disney Plus" %}
-							<a href="{{link}}" target="_blank"><img class="w-75 p-1" alt="Icon" src="https://images.justwatch.com/icon/147638351/s100"/></a>
-						{% endif %}
-						{% if plataforma == "Filmin" %}
-							<a href="{{link}}" target="_blank"><img class="w-75 p-1" alt="Icon" src="https://images.justwatch.com/icon/187161245/s100"/></a>
-						{% endif %}
-						{% if plataforma == "Apple TV Plus" %}
-							<a href="{{link}}" target="_blank"><img class="w-75 p-1" alt="Icon" src="https://images.justwatch.com/icon/152862153/s100"/></a>
-						{% endif %}
-						{% if plataforma == "Crunchyroll" %}
-							<a href="{{stream.1}}" target="_blank"><img class="w-75 p-1" alt="Icon" src="https://images.justwatch.com/icon/127445869/s100"/></a>
-						{% endif %}
-						{% if plataforma == '' %}
-							<a>Sin opciones de streaming</a>
-						{% endif %}
-					{% endfor %}
-					</td>
-				</tr>
-			{% endfor %}		
-		</tbody>
-    </table>
+			<div class="col" style="padding-bottom:30px">
+				<div class="card" style="width: 18rem;">
+					<a href="/series/{{serie.id}}"><img class="card-img-top" src="{{serie.poster}}" alt="Poster"></a>
+					<div class="card-body">
+						<h5 class="card-title">{{serie.titulo}}</h5>
+						<p class="card-text">Temporadas: {{serie.temporadas}}</p>
+					</div>
+				</div>
+			</div>
+			{% endfor %}	
+		</div>
+	</div>	
     {% endif %}
 </div>
 {% endblock %}
