--- a/main/templates/lista_peliculas.html
+++ b/main/templates/lista_peliculas.html
@@ -3,81 +3,19 @@
 {% block titulo %} Listado de películas populares {% endblock %}
 
 {% block contenido %}
-<div class="text-center table-responsive">
-	<table class="table table-striped table-hover table-info" style="margin-bottom: 180px;">
-		<thead class="thead-dark">
-			<tr class="text-center">
-				<th class="align-middle" scope="col">#</th>
-				<th class="align-middle" scope="col">Póster</th>
-				<th class="align-middle" scope="col">Título</th>
-				<th class="align-middle" scope="col">Géneros</th>
-				<th class="align-middle" scope="col">Título original</th>
-				<th class="align-middle" scope="col">Fecha de estreno</th>
-				<th class="align-middle" scope="col">Puntuación en IMDB</th>
-				<th class="align-middle" scope="col">Director</th>
-				<th class="align-middle" scope="col">Opciones de streaming</th>
-			</tr>
-		</thead>
-		<tbody>
-			{% for pelicula in peliculas %}
-				<tr class="text-center">
-					<th class="align-middle" scope="row">{{forloop.counter}}</th>
-					<td class="align-middle"><img width="150" alt="Poster" src="{{pelicula.poster}}" /></td>
-					<td class="align-middle">{{pelicula.titulo}}</td>
-					<td class="align-middle">
-					{% for genero in pelicula.generos.all %}
-						{% if not forloop.last %}
-							<a>{{genero.nombre}},</a>
-						{% endif %}
-						{% if forloop.last %}
-							<a>{{genero.nombre}}</a>
-						{% endif %}
-					{% endfor %}
-					</td>
-					<td class="align-middle">{{pelicula.tituloOriginal}}</td>
-					<td class="align-middle">{{pelicula.fechaEstreno}}</td>
-					<td class="align-middle">{{pelicula.imdb}}</td>
-					<td class="align-middle">{{pelicula.director}}</td>
-					<td class="align-middle">
-					{% for stream in pelicula.streams.all %}
-						{% if stream.plataforma == "Netflix" %}
-							<a href="{{stream.link}}" target="_blank"><img class="w-75 p-1" alt="Icon" src="https://images.justwatch.com/icon/207360008/s100"/></a>
-						{% endif %}
-						{% if stream.plataforma == "Rakuten TV" %}
-							<a href="{{stream.link}}" target="_blank"><img class="w-75 p-1" alt="Icon" src="https://images.justwatch.com/icon/128599720/s100"/></a>
-						{% endif %}
-						{% if stream.plataforma == "Amazon Prime Video" %}
-							<a href="{{stream.link}}" target="_blank"><img class="w-75 p-1" alt="Icon" src="https://images.justwatch.com/icon/52449861/s100"/></a>
-						{% endif %}
-						{% if stream.plataforma == "Atres Player" %}
-							<a href="{{stream.link}}" target="_blank"><img class="w-75 p-1" alt="Icon" src="https://images.justwatch.com/icon/179272126/s100"/></a>
-						{% endif %}
-						{% if stream.plataforma == "HBO" %}
-							<a href="{{stream.link}}" target="_blank"><img class="w-75 p-1" alt="Icon" src="https://images.justwatch.com/icon/3748099/s100"/></a>
-						{% endif %}
-						{% if stream.plataforma == "Movistar Plus" %}
-							<a href="{{stream.link}}" target="_blank"><img class="w-75 p-1" alt="Icon" src="https://images.justwatch.com/icon/5985414/s100"/></a>
-						{% endif %}
-						{% if stream.plataforma == "Disney Plus" %}
-							<a href="{{stream.link}}" target="_blank"><img class="w-75 p-1" alt="Icon" src="https://images.justwatch.com/icon/147638351/s100"/></a>
-						{% endif %}
-						{% if stream.plataforma == "Filmin" %}
-							<a href="{{stream.link}}" target="_blank"><img class="w-75 p-1" alt="Icon" src="https://images.justwatch.com/icon/187161245/s100"/></a>
-						{% endif %}
-						{% if stream.plataforma == "Apple TV Plus" %}
-							<a href="{{stream.link}}" target="_blank"><img class="w-75 p-1" alt="Icon" src="https://images.justwatch.com/icon/152862153/s100"/></a>
-						{% endif %}
-						{% if stream.plataforma == "Crunchyroll" %}
-							<a href="{{stream.link}}" target="_blank"><img class="w-75 p-1" alt="Icon" src="https://images.justwatch.com/icon/127445869/s100"/></a>
-						{% endif %}
-					{% endfor %}
-					{% if pelicula.streams.all|length == 0 %}
-						<a>Sin opciones de streaming</a>
-					{% endif %}
-					</td>
-				</tr>
-			{% endfor %}		
-		</tbody>
-	</table>
-</div>
+<div class="container">
+	<div class="row">
+		{% for pelicula in peliculas %}
+		<div class="col" style="padding-bottom:30px">
+			<div class="card" style="width: 18rem;">
+				<a href="/peliculas/{{pelicula.id}}"><img class="card-img-top" src="{{pelicula.poster}}" alt="Poster"></a>
+				<div class="card-body">
+					<h5 class="card-title">{{pelicula.titulo}}</h5>
+					<p class="card-text">Director: {{pelicula.director}}</p>
+				</div>
+			</div>
+		</div>
+		{% endfor %}	
+	</div>
+</div>	
 {% endblock %}
