--- a/main/templates/actualizar_whoosh.html
+++ b/main/templates/actualizar_whoosh.html
@@ -26,4 +26,8 @@
 		</div>
 	</div>
 </div>
+
+<div clas="text-center">
+	<img class="my-5" src="https://i.ibb.co/6wy39vf/logo.png" />
+</div>
 {% endblock %}
