--- a/main/templates/lista_peliculas.html
+++ b/main/templates/lista_peliculas.html
@@ -17,5 +17,9 @@
 		</div>
 		{% endfor %}	
 	</div>
-</div>	
+</div>
+
+<div clas="text-center">
+	<img class="my-5" src="https://i.ibb.co/6wy39vf/logo.png" />
+</div>
 {% endblock %}
